@startuml
class Instrument {
    - code: String
    - price: int
    - stockAvailable: int
    + Instrument(code: String, price: int, stockAvailable: int)
    + getCode():
    + getPrice():
    + getStockAvalible():
    + setStrockAvalible():
}

class StringInstrument {
    - instrument: String
    - type String: String
    - material: String
    - number String: int
    - type: String
    + StringInstrument(instrument: String, type String: String,
     material: String, number String: int, type: String)
    + getInstrument():
    + getTypeString():
    + getMaterial():
    + getNumberString():
    + getType():
    + setTypeString():
    + setMaterial():
}

class PercussionInstrument {
    - instrument: String
    - type percussion: String
    - material: String
    - altitude: String
    + PercussionInstrument(instrument: String,type percussion: String,
    + material: String, altitude: String)
    + getInstrument():
    + getTypePercussion():
    + getMaterial():
    + getAltitude():
    + setTypePercussion():
    + setAltitude():
    + setMaterial():
}

class WindInstrument {
    - instrument: String
    - material: String
    + WindInstrument(instrument: String, material: String)
    + getInstrument():
    + getMaterial():
    + setMaterial():

}

Instrument <|--- StringInstrument
Instrument <|--- PercussionInstrument
Instrument <|--- WindInstrument


note top of StringInstrument {
    - Qué instrumento es (Guitarra, Bajo, Violín, Arpa)
    - Tipo de cuerda (Nylon, acero, tripa)
    - Material de construcción (madera, metal)
    - Tipo (acústico, eléctrico)
}

note top of PercussionInstrument {
    - Qué instrumento es (Bongó, Cajón, Campanas Tubulares,
    Bombo)
    - Tipo de percusión (Membranófono, idiófono)
    - Material de construcción (madera, metal, piel)
    -  Altura (definida, indefinida)
}

note top of WindInstrument {
    - Que instrumento es (Trompeta, Saxofón, Clarinete, Flauta
    traversa)
    - Material (madera, metal)
}
@enduml